<resources>
    <string name="app_name">mentalTracker - BitFIt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_are_you_feeling_today">How are you feeling today?</string>
    <string name="scale_from_1_10">Scale from 1 - 10</string>
    <string name="why">Why are you feeling this way?</string>
    <string name="date">10/20/2022</string>
    <string name="post_button">Post button</string>
</resources>